# ait

./: .gitignore  README.md  ait.spec  pyproject.toml  test_tui.py
.github/workflows/: build.yml  ci.yml
ait/: ait.tcss  app.py  cli.py  config.py
ait/agent/: ops_agent.py  prompts.py
ait/health/: __init__.py  metrics.py
ait/macros/: __init__.py  example_uptime.yaml  manager.py  models.py
ait/nodes/: manager.py  models.py  ssh.py
ait/security/: policy.py  tui_provider.py
ait/tools/: local_file_tools.py  ssh_tools.py
ait/tui/panels/: __init__.py  audit_panel.py  chat_panel.py  metrics_panel.py  nodes_panel.py  skills_panel.py  tool_panel.py
ait/tui/screens/: chat.py  main.py
ait/tui/widgets/: confirm.py  host_key_dialog.py  node_panel.py  sidebar.py
docs/: DESIGN.md
tests/: test_chat.py
