[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ait"
version = "0.1.0"
description = "AI 智能运维终端 - 用自然语言管理服务器"
authors = [{name = "xiaojiaenen", email = "xiaojiaenen@163.com"}]
license = "Apache-2.0"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "wuwei>=0.1.8",
    "textual>=2.1.0",
    "asyncssh>=2.19.0",
    "pydantic>=2.10.0",
    "typer>=0.15.0",
    "python-dotenv>=1.1.0",
    "structlog>=25.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.25",
    "ruff>=0.11.0",
]

[project.urls]
Homepage = "https://github.com/xiaojiaenen/ait"
Repository = "https://github.com/xiaojiaenen/ait"

[project.scripts]
ait = "ait.cli:app"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
